fixed spacing issues on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,3 +230,13 @@ section.three-column .sort-placeholder {
     -moz-box-shadow: 0px 6px 5px -1px rgba(0, 0, 0, 0.39);
     box-shadow: 0px 6px 5px -1px rgba(0, 0, 0, 0.39);
 }
+
+/* Media Queries */
+@media only screen and (max-width: 600px) {
+    #cv {
+        padding: 0.1rem;
+    }
+    .container {
+        width: 95%;
+    }
+}
